--- a/scikit_learn/naivebays.ipynb
+++ b/scikit_learn/naivebays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,9 @@
       "    accuracy                           0.86       300\n",
       "   macro avg       0.87      0.86      0.86       300\n",
       "weighted avg       0.87      0.86      0.86       300\n",
-      "\n"
+      "\n",
+      "\n",
+      "Multinomial Naive Bayes (Text Classification):\n"
      ]
     }
    ],
