--- a/pytorch/torch_demo.ipynb
+++ b/pytorch/torch_demo.ipynb
@@ -1525,8 +1525,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "0cb9044f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 3., 7.],\n",
+      "        [0., 2., 5.],\n",
+      "        [2., 8., 0.]])\n",
+      "tensor([[2., 5., 3.],\n",
+      "        [6., 7., 8.],\n",
+      "        [1., 2., 3.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = torch.randint(size=(3,3),low=0,high=10,dtype=torch.float32) \n",
+    "j = torch.randint(size=(3,3),low=0,high=10,dtype=torch.float32)\n",
+    "print(i)  \n",
+    "print(j)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "cc1f65b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False, False,  True],\n",
+       "        [False, False, False],\n",
+       "        [ True,  True, False]])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i > j "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "7e6ca9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False,  True, False],\n",
+       "        [ True,  True,  True],\n",
+       "        [False, False,  True]])"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i < j\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "b80f95aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[True, True, True],\n",
+       "        [True, True, True],\n",
+       "        [True, True, True]])"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i == j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "662f8c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[False, False, False],\n",
+       "        [False, False, False],\n",
+       "        [False, False, False]])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i != j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf16d98a",
    "metadata": {},
    "outputs": [],
    "source": []
