--- a/pytorch/torch_demo.ipynb
+++ b/pytorch/torch_demo.ipynb
@@ -1643,11 +1643,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "bf16d98a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 2., 4.],\n",
+       "        [8., 9., 6.],\n",
+       "        [1., 4., 5.]])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = torch.randint(size=(3,3),low=0,high=10, dtype=torch.float32 )\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "0204d9e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6931, 1.9459, 2.1972],\n",
+       "        [1.0986, 2.1972, 1.9459],\n",
+       "        [1.9459, 1.6094, 2.1972]])"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.log(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "95532866",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[7.3891e+00, 1.0966e+03, 8.1031e+03],\n",
+       "        [2.0086e+01, 8.1031e+03, 1.0966e+03],\n",
+       "        [1.0966e+03, 1.4841e+02, 8.1031e+03]])"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "7f94c059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.4142, 2.6458, 3.0000],\n",
+       "        [1.7321, 3.0000, 2.6458],\n",
+       "        [2.6458, 2.2361, 3.0000]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sqrt(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "f5215a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.7120, 0.6975],\n",
+       "        [0.5754, 0.6621]])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sigmoid(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "ce14e383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2.4704e-03, 9.0496e-04, 9.0031e-02],\n",
+       "        [9.9662e-01, 9.9241e-01, 6.6524e-01],\n",
+       "        [9.0880e-04, 6.6868e-03, 2.4473e-01]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(k,dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "5d17c1f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 2., 4.],\n",
+       "        [8., 9., 6.],\n",
+       "        [1., 4., 5.]])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.relu(k)\n"
+   ]
   }
  ],
  "metadata": {
