--- a/pytorch/torch_demo.ipynb
+++ b/pytorch/torch_demo.ipynb
@@ -2243,8 +2243,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "id": "bc3df56f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "cca7f56d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "01d3ae1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.8344, 0.7001, 0.5361],\n",
+       "        [0.8883, 0.0220, 0.7938]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.rand((2,3), device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "id": "19a65ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[10.0000,  0.6269,  0.8277],\n",
+       "        [ 0.6594,  0.0887,  0.4890]])"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "9880eb41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b= a.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "76d9b76e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[15.0000,  5.6269,  5.8277],\n",
+       "        [ 5.6594,  5.0887,  5.4890]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b +5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96baff38",
    "metadata": {},
    "outputs": [],
    "source": []
