Load data → Preprocess → Convert to tensors → Build model → Train model → Evaluate model → Measure accuracy ✅

--- a/pytorch/pytorch-training-pipeline.ipynb
+++ b/pytorch/pytorch-training-pipeline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "686c80a6",
+   "metadata": {},
+   "source": [
+    "Load data → Preprocess → Convert to tensors → Build model →\n",
+    "Train model → Evaluate model → Measure accuracy ✅\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9890430b",
